# psikorender

./: .env.example  .gitignore  .vercelignore  Cargo.toml  README.md  docker-compose.yml  vercel.json
apps/web/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/web/public/: manifest.webmanifest  sw.js
apps/web/src/: entry.dev.tsx  main.ts  root.tsx  styles.css
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/captions/: Cargo.toml
crates/captions/src/: lib.rs
crates/media_core/: Cargo.toml
crates/media_core/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/tts/: Cargo.toml
crates/tts/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
scripts/: dev.ps1
