[workspace]
members = [
  "crates/api",
  "crates/captions",
  "crates/media_core",
  "crates/renderer",
  "crates/shared",
  "crates/tts",
  "crates/worker",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/psikorender/psikorender"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
